create one lightbox partial for Article, Activity, News

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -93,32 +93,7 @@
 	</div>
       </div>
 
-      <div class="right_part">
-        <div class="pikachoose">
-        <% if @activity.photos.count == 1 %>
-          <div class="mask"></div>
-          <%= link_to image_tag(@activity.photos.last.attach.url(:slider)), '#' %>
-        <% elsif  @activity.photos.count > 1 %>
-          <div class="mask"></div>
-          <ul id="pikame" class="jcarousel-skin-pika">
-          <% @activity.photos.each do |photo| %>
-            <li><%= link_to image_tag(photo.attach.url(:slider), 'data-hook-class' => "photo#{photo.id}") %></li>
-          <% end %>
-          <% @activity.videos.each do |video| %>
-            <li class="slideshow_video_item"><div class="video"></div><%= link_to image_tag(video.preview_url, 'data-hook-class' => "video#{video.id} ", 'style' => 'width:530px') %></li>
-          <% end %>
-          </ul>
-        <% end %>
-        </div>
-        <div id="lightbox_hook" class="hidden">
-          <% @activity.photos.each do |photo| %>
-            <%= link_to '#', photo.attach.url(:large), class: "photo#{photo.id}", rel: "prettyPhoto[activity]" %>
-          <% end %>
-          <% @activity.videos.each do |video| %>
-            <%= link_to '#', video.url, class: "video#{video.id}", rel: "prettyPhoto[activity]" %>
-          <% end %>
-        </div>
-      </div>
+      <%= render 'shared/photos_lightbox', object: @activity %>
       
       <div class="clear"></div>
 
