--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,9 +6,9 @@
     <h1><%= @article.title %> <%= favourite_block @article %></h1>
     <strong><%= @article.author.name %>. <%= Russian::strftime(@article.updated_at, "%A, %e %B %Y г.") %></strong>
     <div class="post_preview">
-      <div class="thumb">
-	<%= image_tag @article.picture.url(:medium) %>
-      </div>
+
+      <%= render 'shared/photos_lightbox', object: @article %>
+
       <div class="short_desc">
 	<%== @article.short_description %>
       </div>
