--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -101,7 +101,7 @@
                       <div class="thumb"><%= image_tag n.photo.url %></div>
                       <div class="info">
                         <div class="name"><%= link_to n.title, n %></div>
-                        <div class="short_desc"><%= truncate(n.content, separator: '.', omission: '.', length: 140) %>..</div>
+                        <div class="short_desc"><%= truncate(n.content, separator: '.', omission: '.', length: 140) %></div>
                       </div>
                     </div>
                     </li>
