--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -11,7 +11,7 @@
     <div class="news_view">
       <div class="title"><%= @news.title %></div>
       <div class="date"><%= Russian::strftime(@news.created_at, "%e %B, %A") %></div>
-      <div class="text"><%= @news.content %></div>
+      <div class="text"><%= raw @news.full_text %></div>
       <div class="article_tags">
 	<% @tags.each do |t| %>
 	  <%= link_to t.name, tag_articles_path(tag: t.name) %>
