--- a/app/views/shared/_editor_toolbar.html.erb
+++ b/app/views/shared/_editor_toolbar.html.erb
@@ -3,6 +3,7 @@
   <a data-wysihtml5-command="italic">italic</a>
   <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h5">quote</a>
   <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h4">question</a>
+  <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="p">comments</a>
   <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
   <a data-wysihtml5-command="insertImage">insert image</a>
   <div data-wysihtml5-dialog="insertImage" style="display: none;">
