--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
 
   <div style="float:right; width:100%;	margin-left:-540px;">
   <div class="personality_column">
-    <% [@teachers_category, @foreign_category].each do |category| %>
+    <% [@foreign_category].each do |category| %>
       <% if article = category.articles.sample %>
       <div class="personality_preview">
         <div class="personality_wrapper">
