--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -420,7 +420,6 @@ span.sim_check.active { background-position:0px 0px; }
 .detail_page .info_block table { width: 250px;}
 .detail_page .info_block .activ_site { position:relative; width:160px;}
 .detail_page .info_block .activ_address { position:relative; width:160px;}
-.detail_page .info_block .mask { background:url(/assets/fade_text.png) no-repeat; width:96px; height:24px; position:absolute; right:-20px; top:0px}
 .detail_page .base { font-weight:bold;}
 .detail_page .cat_list { padding-bottom:20px;}
 .detail_page .info_block th { text-align:left; padding-right:10px; background:url(/assets/punktir_info.jpg) repeat-x 0px 15px;}
@@ -457,8 +456,8 @@ span.sim_check.active { background-position:0px 0px; }
 #ruk_slider { position:relative}
 #ruk_slider .slides_container { width:740px; height:140px; margin:auto}
 #ruk_slider .slide { height:140px; width:740px; display:block; }
-#ruk_slider .thumb { position:relative; float:left; width:120px; height:120px}
-#ruk_slider .thumb .mask { width:120px; height:120px; background:url(/assets/rukov_mask.png) no-repeat center center; display:block; position:absolute}
+#ruk_slider .thumb { position:relative; float:left; overflow: hidden; width:120px; height:120px; behavior: url(border-radius.htc); -moz-border-radius:60px; border-radius:60px; -webkit-border-radius:60px; -khtml-border-radius:60px;}
+#ruk_slider .thumb img { display: block; behavior: url(border-radius.htc); -moz-border-radius:60px; border-radius:60px; -webkit-border-radius:60px; -khtml-border-radius:60px; }
 #ruk_slider .info { margin-left:140px;}
 #ruk_slider .info .name { font-size:16px; color:#007ba4; font-family:Futura; padding-bottom:5px}
 
@@ -971,6 +970,6 @@ span.sim_check.active { background-position:0px 0px; }
 #slider-code .next {   }
 #slider-code .disable {  }
 #slider-code .overview { list-style: none; position: absolute; padding: 0; margin: 0; left: 0; top: 0; }
-#slider-code .overview li{  height: 110px; width:  100%;}
+#slider-code .overview li{  min-height: 110px; width:  100%;}
 #slider-code .overview li img { height:75px}
 #slider-code .nav_arrow { background:#d2d2ce; text-align:center; position:absolute; width:100%; padding:2px 0; bottom:0}
