--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -103,6 +103,7 @@
                         <div class="name"><%= link_to n.title, n %></div>
                         <div class="short_desc"><%= truncate(n.content, separator: '.', omission: '.', length: 140) %></div>
                       </div>
+                      <div class="clear"></div>
                     </div>
                     </li>
                     <% end %>
