--- a/app/views/shared/_photos_lightbox.html.erb
+++ b/app/views/shared/_photos_lightbox.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div id="lightbox_hook" class="hidden">
     <% object.photos.each do |photo| %>
-      <%= link_to '#', photo.attach.url(:original), class: "photo#{photo.id}", rel: "prettyPhoto[activity]" %>
+      <%= link_to '#', photo.attach.url(:large), class: "photo#{photo.id}", rel: "prettyPhoto[activity]" %>
     <% end %>
     <% object.videos.each do |video| %>
       <%= link_to '#', video.url, class: "video#{video.id}", rel: "prettyPhoto[activity]" %>
