--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,7 @@
     <strong><%= @article.author.name %>. <%= Russian::strftime(@article.updated_at, "%A, %e %B %Y г.") %></strong>
     <div class="post_preview">
       
-      <div style="float: left">
+      <div class="gallery_wrapper">
       <%= render 'shared/photos_lightbox', object: @article %>
         <div class="clear"></div>
       </div>
