--- a/app/views/shared/_photos_lightbox.html.erb
+++ b/app/views/shared/_photos_lightbox.html.erb
@@ -1,3 +1,4 @@
+<!-- TODO: rewrite this bbrr -->
 <div class="right_part">
   <div class="pikachoose">
     <% if object.photos.count == 1 %>
@@ -6,27 +7,31 @@
     <% elsif object.photos.count > 1 %>
       <div class="mask"></div>
       <ul id="pikame" class="jcarousel-skin-pika">
-        <% object.photos.each do |photo| %>
-          <li><%= link_to image_tag(photo.attach.url(:slider), 'data-hook-class' => "photo#{photo.id}") %></li>
-        <% end %>
-        <% object.videos.each do |video| %>
-          <li class="slideshow_video_item">
-            <div class="video"></div>
-            <%= link_to image_tag(video.preview_url, 'data-hook-class' => "video#{video.id} ", 'style' => 'width:530px') %>
-          </li>
-        <% end %>
+	<% object.photos.each do |photo| %>
+	  <li><%= link_to image_tag(photo.attach.url(:slider), 'data-hook-class' => "photo#{photo.id}") %></li>
+	<% end %>
+	<% object.videos.each do |video| %>
+	  <li class="slideshow_video_item">
+	    <div class="video"></div>
+	    <%= link_to image_tag(video.preview_url, 'data-hook-class' => "video#{video.id} ", 'style' => 'width:530px') %>
+	  </li>
+	<% end %>
       </ul>
     <% elsif object.videos.present? %>
-      <div class="mask"></div>
-      <ul id="pikame" class="jcarousel-skin-pika">
-        <% object.videos.each do |video| %>
-          <li class="slideshow_video_item">
-            <div class="video"></div>
-            <%= link_to image_tag(video.preview_url, 'data-hook-class' => "video#{video.id} ", 'style' => 'width:530px') %>
-          </li>
-        <% end %>
-      </ul>
-    <% else object.photo.present? %>
+      <% if object.videos.count == 1 %>
+	<%= link_to image_tag(object.videos.last.preview_url, 'style' => 'width:530px',), object.videos.last.url, rel: "prettyPhoto" %>
+      <% else %>
+	<div class="mask"></div>
+	<ul id="pikame" class="jcarousel-skin-pika">
+	  <% object.videos.each do |video| %>
+	    <li class="slideshow_video_item">
+	      <div class="video"></div>
+	      <%= link_to image_tag(video.preview_url, 'data-hook-class' => "video#{video.id} ", 'style' => 'width:530px') %>
+	    </li>
+	  <% end %>
+	</ul>
+      <% end %>
+    <% elsif object.photo.present? %>
       <div class="mask"></div>
       <%= link_to image_tag(object.photo.url(:slider)), '#' %>
     <% end %>
