--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -2,6 +2,9 @@
   <%= f.inputs 'Основное' do %>
     <%= f.input :email %>
     <%= f.input :role, as: :select, collection: Role.user_sets, include_blank: false %>
+    <div id="chose_user_activity">
+      <%= f.input :activity, as: :select, collection: Activity.all, include_blank: false,  input_html: { class: 'chosen_autocomplete' } %>
+    </div>
     <%= f.input :name %>
     <%= f.input :avatar, as: :file, hint: f.template.image_tag(f.object.avatar.url(:medium)) %>
   <% end %>
