move dashboard to namespace Dashboard

--- a/app/views/dashboard/comments/index.html.erb
+++ b/app/views/dashboard/comments/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'profile_menu', current: 'comments' %>
+<%= render 'dashboard/shared/profile_menu', current: 'comments' %>
 
 <div class="profile_comment">
   <div class="profile_title">Ваши комментарии к материалам сайта</div>
