--- a/app/views/dashboard/profiles/show.html.erb
+++ b/app/views/dashboard/profiles/show.html.erb
@@ -1,10 +1,9 @@
-<%= render 'profile_menu', current: 'profile' %>
-
+<%= render 'dashboard/shared/profile_menu', current: 'profile' %>
 
 <div id="profile_form_wrapper">
-  <%= form_for @user, url: dashboard_profile_path,
-                    method: :put,
-                    html: { id: :update_profile_form, multipart: true } do |f| %>
+  <%= form_for current_user, url: dashboard_profile_path,
+                      method: :put,
+                      html: { id: :update_profile_form, multipart: true } do |f| %>
   <div class="profile_change_wrapper">
     <div class="profile_change_avatar">
       <div class="info_label">
@@ -13,7 +12,7 @@
       </div>
       <div class="current_ava">
         <span>Текущий  аватар</span><br />
-        <div class="thumb"><%= image_tag @user.avatar %></div>
+        <div class="thumb"><%= image_tag current_user.avatar %></div>
       </div>
       <div class="field">
         <div class="download_button_wrapper">
@@ -58,3 +57,4 @@
   </div>
   <% end %>
 </div>
+
