--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,13 +31,13 @@
 	  <a class="login_button" href="#"><img src="/assets/ico_login.png" alt="" /></a>
 	<% else %>
 	  <div class="is_login">
-	    <a class="login_user_flag" href="<%= dashboard_profile_path %>"><%= current_user.name %><span class="mask"></span></a>
+	    <a class="login_user_flag" href="<%= dashboard_profile_path %>"><%= current_user.name || 'Без имени' %><span class="mask"></span></a>
 	    <a href="#" class="logout logout_link">Выйти</a>
       <div class="profile_menu hidden">
         <ul>
           <li><%= link_to 'Профиль', dashboard_profile_path %></li>
-          <li><%= link_to 'Комментарии', dashboard_notifications_path %></li>
-          <li><%= link_to 'Избранное', dashboard_favourites_path %></li>
+          <li><%= link_to 'Комментарии', dashboard_comments_path %></li>
+          <li><%= link_to 'Избранное', dashboard_favorites_path %></li>
         </ul>
       </div>
 	  </div>
