News page media fix. Tiny CSS fixes.

--- a/app/assets/stylesheets/bottom.css
+++ b/app/assets/stylesheets/bottom.css
@@ -8,3 +8,5 @@
 .pika-stage a img { width:530px;}
 .pikachoose .mask { background:url(/assets/slider_pages_mask.png) no-repeat; position:absolute; width:532px; height:370px; z-index:50}
 .pikachoose .video { background:url(/assets/play_ico.png) no-repeat; position:absolute; width:24px; height:24px; z-index:50; margin-left:33px; margin-top:22px}
+.pikachoose a.video_alone { display: block; position: relative;}
+.pikachoose a.video_alone .video_big { position:absolute; z-index: 99; top: 50%; left: 50%; display: block; width: 0; height: 0; margin: -25px 0 0 -15px; opacity: .75; border-top: 25px solid transparent; border-bottom: 25px solid transparent; border-left: 50px solid #fff;}
