--- a/app/views/creative_group/show.html.erb
+++ b/app/views/creative_group/show.html.erb
@@ -17,7 +17,7 @@
     <!-- OPTIMIZE: brrrr...brrr -->
     <div class="name"><%== @creative.name.split(' ').join('<br>') %></div>
     <div class="thumb">
-      <%= link_to image_tag(@creative.avatar(:medium)), creative_group_path(@creative) %>
+      <%= image_tag(@creative.avatar(:medium)) %>
     </div>
     <div class="doljnost"><%= @creative.profession %></div>
     <div class="clear"></div>
