--- a/app/views/dashboard/shared/_profile_menu.html.erb
+++ b/app/views/dashboard/shared/_profile_menu.html.erb
@@ -9,6 +9,10 @@
         class: "comment_ico#{(current == 'comments' ? ' active' : '')}" %>
     <%= content_tag :li, link_to("Избранное", dashboard_favorites_path),
         class: "fav_ico#{(current == 'favourites' ? ' active' : '')}" %>
+    <% if can? :manage, :dashboard_activity %>
+      <%= content_tag :li, link_to("Кружок", dashboard_activity_path),
+          class: "activity_ico#{(current == 'activity' ? ' active' : '')}" %>
+    <% end %>
   </ul>
   <div class="clear"></div>
 </div>
