--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title><%= yield(:title).present? ? yield(:title) : 'Фестиваль Яркие Люди' %></title>
-    <%= yield :head %>
+    <%= yield :before_head %>
     <%= stylesheet_link_tag 'application', :media => "all" %>
     <%= javascript_include_tag 'application' %>
+    <%= yield :after_head %>
     <%= csrf_meta_tags %>
   </head>
   <%== yield(:body).present? ? yield(:body) : '<body>' %>
