fix dashboard/activity page

--- a/app/views/dashboard/activities/_main.html.erb
+++ b/app/views/dashboard/activities/_main.html.erb
@@ -4,13 +4,15 @@
     <span class="title">Основная информация о кружке</span>
   </div>
 
+  <!-- Fix this -->
+  99. Опубликовать
+  <%= f.select :published, [['Да', true],['Нет', false]] %>
+
+  Организация: <%= f.object.organization.title %>
+  
   <div class="item width50">
     1. Название
     <%= f.text_field :title, placehold: "Название" %>
-  </div>
-  <div class="item width50">
-    2. Организация/центр/учреждение
-    <%= f.collection_select :organization_id, Organization.all, :id, :title %>
   </div>
   <div class="clear"></div>
 
