--- a/app/views/dashboard/activities/show.html.erb
+++ b/app/views/dashboard/activities/show.html.erb
@@ -13,8 +13,9 @@
 
 
   <%= render 'schedule', f: f %>
-  <%= render 'galery', f: f %>
+  <%= render 'gallery', f: f %>
 
+  <%= render 'publication', f: f %>
 
   <div class="save">
     <button>Сохранить</button>
