--- a/app/views/dashboard/activities/_additional.html.erb
+++ b/app/views/dashboard/activities/_additional.html.erb
@@ -7,15 +7,15 @@
 
   <div class="item width33">
     1. Стоимость и длительность
-    <%= f.text_area :additional_information %>
+    <%= f.text_area :additional_information, :class => 'rte-zone' %>
   </div>
   <div class="item width33">
     2. Чем заняться родителю
-    <%= f.text_area :parent_activities %>
+    <%= f.text_area :parent_activities, :class => 'rte-zone' %>
   </div>
   <div class="item width33">
     3. Дополнительно
-    <%= f.text_area :cost %>
+    <%= f.text_area :cost, :class => 'rte-zone' %>
   </div>
   <div class="clear"></div>
 
