--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -12,7 +12,7 @@
 .profile_change_wrapper .profile_change_avatar .field { float:left; margin-right:20px; padding-top:40px}
 .profile_change_wrapper .profile_change_avatar .field .download_button_wrapper { cursor:pointer; margin-left:10px; width:186px; height:36px; overflow:hidden; display:block; position:relative}
 .profile_change_wrapper .profile_change_avatar .field .mask_button { text-align:center; display:block; background:url(/assets/download_avatar.png) no-repeat; width:186px; height:36px; line-height:36px; cursor:pointer}
-.profile_change_wrapper .profile_change_avatar .field .download_button_wrapper input {  position:absolute; z-index:10; top:0; margin-left:-10px; margin-top:-10px; background:none; border:none; font-size:2000px; cursor:pointer}
+.profile_change_wrapper .profile_change_avatar .field .download_button_wrapper input {  position:absolute; z-index:10; opacity: 0; top:0; margin-left:-10px; margin-top:-10px; background:none; border:none; font-size:2000px; cursor:pointer}
 
 
 .profile_change_wrapper .profile_change_name { padding:20px 0px; border-bottom:1px solid #cccccc}
