--- a/app/views/dashboard/activities/_main.html.erb
+++ b/app/views/dashboard/activities/_main.html.erb
@@ -62,7 +62,7 @@
   </div>
   <div class="item width75">
     10. Описание
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :class => 'rte-zone' %>
   </div>
   <div class="clear"></div>
 </div>
