--- a/app/views/dashboard/activities/_teacher.html.erb
+++ b/app/views/dashboard/activities/_teacher.html.erb
@@ -6,7 +6,7 @@
 	<%= t.text_field :name %>
 	<br>
 	2. Биография
-	<%= t.text_area :description %>
+	<%= t.text_area :description, :class => 'rte-zone' %>
       </div>
       <div class="item width50">
 	3. Портрет
