--- a/app/views/dashboard/activities/show.html.erb
+++ b/app/views/dashboard/activities/show.html.erb
@@ -1,4 +1,4 @@
-<%= include_js :after_head, load_ymaps(true), 'chosen.jquery.min', 'dashboard/activities' %>
+<%= include_js :after_head, load_ymaps(true), 'chosen.jquery.min', 'dashboard/activities', 'jquery.rte' %>
 
 
 <%= render 'dashboard/shared/profile_menu', current: 'activity' %>
