Added title on the news page. Removed odd sliders from the main page.

--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -1,5 +1,4 @@
-<div id="nested_slider">
-  
+<div id="nested_slider" class="slider">  
   <div id="slider_fest" class="slider" style="z-index:20">
     <div class="slides_container">
       <div class="slide" style="background:url(/assets/samp/slide_2.jpg) no-repeat 0 top; height:395px">
@@ -11,46 +10,6 @@
     </div> 
     <a href="" class="next">Вперед</a>
     <a href="" class="prev">Назад</a>
-  </div>
-  
-
-  
-  <div id="slider_user" class="slider">
-    <div class="slides_container">
-      <div class="slide" style="background:url(/assets/samp/slide_user_1.jpg) no-repeat 0 top; height:395px">
-        <div class="slide_text">
-            <div style="float:left; padding-right:50px; padding-top:100px">
-            	Парк Горького<br />
-              18 августа<br />
-              10:00-23:00<br />
-              <span style="color:#bb224c">Вход свободный</span>
-            </div>  
-        </div>
-      </div>
-      <div class="slide" style="background:url(/assets/samp/slide_user_2.jpg) no-repeat 0 top; height:395px">
-        <div class="slide_text">
-            <div style="float:left; padding-right:50px; padding-top:100px">
-            	Парк Горького<br />
-              18 августа<br />
-              10:00-23:00<br />
-              <span style="color:#bb224c">Вход свободный</span>
-            </div>
-        </div>
-      </div>
-    </div>
-    <a href="" class="next">Вперед</a>
-    <a href="" class="prev">Назад</a>
-  </div>
-  
-  <div id="slider_org" class="slider">
-      <div class="slides_container">
-          <div class="slide" style="background:url(/assets/samp/slide_org.jpg) no-repeat 0 top; height:395px">
-  
-              <div class="slide_text">
-                
-              </div>
-  	     	</div>
-      </div>
   </div>
 </div>
 
