--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <div class="search_list">
-      <%= render 'searches/result', results: @results %>
+      <%= render 'result', results: @results %>
     </div>
   </div>
 
@@ -26,7 +26,6 @@
     <%= render 'shared/sidebar' %>
   </div>
   <div class="clear"></div>
-
 
 
 </div>
