--- a/app/views/activities/_about_activity.html.erb
+++ b/app/views/activities/_about_activity.html.erb
@@ -64,7 +64,8 @@
     <% end %>
   </div>
 <% else %>
-    <div id="ruk_slider">
-      <%== activity.replace_teacher_text %>
-    </div>
+  <div class="title_block">Здесь работают</div>
+  <div id="ruk_slider">
+    <%== activity.replace_teacher_text %>
+  </div>
 <% end %>
