--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="description">
-        <%= @sponsor.description %>
+        <%== @sponsor.text %>
       </div>
       <div class="clear"></div>
     </div>
