--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -13,7 +13,7 @@
         <li><%= link_to 'Организации', '' %></li>
         <li><%= link_to 'Журнал', '' %></li>
         <li><%= link_to 'Конкурсы', '' %></li>
-        <li><%= link_to 'Экспертный совет', '' %></li>
+        <li><%= link_to 'Личности', '' %></li>
         <li><%= link_to 'Спецпроекты', '' %></li>
       </ul>
     </div>
