--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -1,4 +1,4 @@
-<div class="name"><%= link_to object.full_name, object %></div>
+<div class="name"><%= link_to object.name, expert_path(object) %></div>
 
 <div class="short_desc"><%= object.description %></div>
 
