--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -1,6 +1,6 @@
-<div class="name"><%= link_to object.excerpts.title.html_safe, object %></div>
+<div class="name"><%= link_to object.title, object %></div>
 
-<div class="short_desc"><%= object.excerpts.description.html_safe %></div>
+<div class="short_desc"><%= object.description %></div>
 
 <div class="info">
   <em>В разделе</em>
